[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { version = "0.10.2", features = ["cpi"] }
pinocchio-system = "0.5.0"

[features]
no-entrypoint = []

[dev-dependencies]
litesvm = "0.9.1"
solana-keypair = "~3.1"
solana-signer = "~3.0"
solana-pubkey = "~4.0"
solana-instruction = "~3.1"
solana-message = "~3.0"
solana-transaction = "~3.0"
solana-system-interface = "~3.0"
solana-account = "~3.3"

# for devnet testing
solana-rpc-client = "~3.1"
solana-hash = "~4.0"
dirs = "6"
serde_json = "1"

[[test]]
name = "vault_tests"
path = "tests/vault_tests.rs"
required-features = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
